# sentiment_end_2_end

./: .gitignore  Makefile  README.md  main.py  project_flow.md  pyproject.toml  setup.py
docs/: Makefile  conf.py  make.bat
notebooks/: exp1.ipynb
src/config/: constants.py
