[project]
name = "sentiment-end-2-end"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cookiecutter>=2.7.1",
    "dagshub>=0.6.9",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.10.1",
    "nltk>=3.9.4",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "pip>=26.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools>=82.0.1",
    "textblob>=0.19.0",
]
